ImageFade fix and start on mobile homepage UI

--- a/src/styles/components/CollapsibleCards.module.scss
+++ b/src/styles/components/CollapsibleCards.module.scss
@@ -1,7 +1,10 @@
 @import '@styles/Variables';
 
 .wrapper {
+
     .row {
+        display: none;
+        @include for-tablet-landscape-up { display: flex }
         width: 1000px;
         height: 300px;
         transition: width 1s;
