--- a/src/styles/components/SidebarSmall.module.scss
+++ b/src/styles/components/SidebarSmall.module.scss
@@ -9,6 +9,9 @@
     z-index: $sidebarSmallZIndex;
 
     .container {
+        display: none;
+        @include for-tablet-landscape-up { display: flex }
+
         background-color: rgba(black, 0.5);
         padding-top: 10px;
         width: 70px;
