--- a/src/styles/pages/HomePage.module.scss
+++ b/src/styles/pages/HomePage.module.scss
@@ -66,6 +66,24 @@
         .highlights {
             color: white;
             margin-bottom: 30px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            > button {
+                margin-bottom: 20px;
+                margin-right: 0;
+            }
+
+            @include for-tablet-landscape-up {
+                flex-direction: row;
+                justify-content: space-between;
+
+                > button {
+                    margin-bottom: 20px;
+                    &:not(:last-child) { margin-right: 30px }
+                }
+            }
         }
     }
 }
